# happy_ai_life

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  CONTEXT.md  LICENSE  README.md  SECURITY.md  app.py  copilot-session-9f2eaf15-fea9-4a4b-8351-44ef1055e4d0.md  happy_env.py  home_sync_experiment.py  pyproject.toml
.github/: copilot-instructions.md
docs/: AI_REPRO_SECURITY_ROADMAP.md  AUTHORING.md  COPILOT_CLI_HANDOFF_AI_REPRO_SECURITY.md  DEVELOPMENT.md  ENTERPRISE_SECURITY.md  ENTERPRISE_SECURITY_REVIEW.md  FAQ.md  GETTING_STARTED.md  HOME_SYNC.md  HOOKS_GOVERNANCE.md  ISSUE_ROADMAP_ENTERPRISE_SECURITY.md  PHILOSOPHY.md  PHILOSOPHY_SUMMARY.md  PLUGIN_MAINTENANCE.md  PRIVATE_EVAL.md  QUALITY_GATES.md  REFERENCE.md  REPO_BOOTSTRAP.md  SKILL_ECOSYSTEM_ACTION_PLAN.md  SKILL_MAP.md  TROUBLESHOOTING.md  TRUST_BOUNDARY.md  WORKS_PROMOTION.md  WSL2_DEVELOPMENT.md  agent-dispatch-options.md  agent-evaluation-guide.md  archiveした理由.md  copilot-plugin-distribution-follow-up-scope.md
policy/: guard-policy.draft.json  guard-policy.json  guard-policy.schema.draft.json  guard-policy.schema.json
repo-template/: .gitattributes
scripts/: __init__.py  enter-copilot-maintenance-mode.ps1  exit-copilot-maintenance-mode.ps1  guard_policy.py  home_sync_planner.py  install-git-hooks.ps1  install-git-hooks.sh  repo-secure-check.ps1  repo-secure-check.sh  sync-to-home.ps1  sync-to-home.sh  sync-to-repo.ps1  sync-to-repo.sh  sync_to_home_cli.py  validate-session-hooks.js
tests/: _guard_helpers.py  test_add_slide.py  test_app_smoke.py  test_bash_guard_policy.py  test_clean.py  (+42 more)
(+524 files in other folders)
