[project]
name = "happy-ai-life"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "defusedxml>=0.7.1",
    "lxml>=5.3.0",
    "Pillow>=11.0.0",
    "PyYAML>=6.0",
    "types-lxml",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.9",
    "ty>=0.0.29",
]

[tool.ty.environment]
extra-paths = [
    "./plugins/happy-core/skills/pptx/scripts",
    "./plugins/happy-coding/skills/impl-and-ship/orchestrator",
    "./plugins/happy-coding/skills/impl-and-ship/checkpoints",
    "./plugins/happy-coding/skills/sdd/sub_skills/split_multi_repo_plan",
]

[tool.ty.src]
exclude = ["plugins/**"]

[tool.pytest.ini_options]
norecursedirs = ["archive"]

[tool.ruff]
exclude = ["archive"]
